# wayland-inhibit

./: idle-inhibit-unstable-v1.c  idle-inhibit-unstable-v1.h  main.c  meson.build
